Header spacing fixes

--- a/frontend/scss/components/_menus.scss
+++ b/frontend/scss/components/_menus.scss
@@ -76,7 +76,7 @@
       height: 0;
       left: 0;
       right: 0;
-      bottom: -22px;
+      bottom: -16px;
       margin: 0;
       background: $brandColor;
       @include transition(height .2s ease-in-out);
